@@ -1,6 +1,8 @@
 * Change log
 **	[Unrealeased] [2016-11-24]
 *** Changed
+- modified test to handle password hashes
+- Added password hashing
 - Added virtual fields to the user schema
 - modified the tests to accept the virtual fields
 - Added confirm password field to the form.
